--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "Area App",
+    "slug": "area-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "areaapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
