--- a/backend/env.example
+++ b/backend/env.example
@@ -2,8 +2,8 @@
 PORT=3000
 NODE_ENV=development
 
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/area_app"
+# Database (MongoDB)
+DATABASE_URL="mongodb://localhost:27017/area_app"
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-here
@@ -14,4 +14,12 @@ CORS_ORIGIN=http://localhost:8081
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+
+# Mapbox
+MAPBOX_ACCESS_TOKEN=your-mapbox-access-token 
