--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "@prisma/client": "^5.7.1",
     "zod": "^3.22.4",
     "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.41.0",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
