--- a/frontend/app.json
+++ b/frontend/app.json
@@ -8,6 +8,13 @@
     "scheme": "areaapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.yourapp.areaapp",
