--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,8 +48,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-native": "^0.73.0",
     "typescript": "~5.8.3"
   }
 }
