--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "jsx": "react-jsx",
+    "strict": false,
+    "jsx": "react-native",
     "skipLibCheck": true,
+    "noImplicitAny": false,
     "paths": {
       "@/*": [
         "./*"
