--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,30 +17,30 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@rnmapbox/maps": "^10.1.39",
     "axios": "^1.10.0",
-    "expo": "53.0.19",
-    "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.10",
-    "expo-constants": "~17.1.3",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-location": "~18.1.6",
-    "expo-router": "~5.1.3",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
+    "expo-router": "2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-symbols": "~0.1.2",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
     "lucide-react-native": "^0.525.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
@@ -48,8 +48,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-native": "^0.73.0",
     "typescript": "~5.8.3"
   }
