--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "ts-node src/index.js",
+    "start": "ts-node src/index.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -34,6 +34,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "prisma": "^5.22.0",
     "socket.io": "^4.7.4",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -44,7 +45,6 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.19.9",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
