--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "prisma": "^5.22.0",
     "socket.io": "^4.7.4",
     "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -44,7 +45,6 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.19.9",
-    "nodemon": "^3.1.10",
-    "typescript": "^5.8.3"
+    "nodemon": "^3.1.10"
   }
 }
