--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,8 +16,8 @@
     "sourceMap": true,
     "removeComments": true,
     "strictNullChecks": false,
-    "strictFunctionTypes": true,
-    "noImplicitReturns": true,
+    "strictFunctionTypes": false,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "baseUrl": "./",
