--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "@types/bcryptjs": "^2.4.6",
   "@types/jsonwebtoken": "^9.0.10",
   "@types/multer": "^1.4.11",
+  "@types/node": "^20.19.9",
   "bcryptjs": "^2.4.3",
   "cloudinary": "^1.41.0",
   "cors": "^2.8.5",
