--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -6,7 +6,8 @@
     "production": {
       "distribution": "store",
       "ios": {
-        "simulator": false
+        "simulator": false,
+        "autoIncrement": "buildNumber"
       }
     }
   }
