--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,11 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
-    "expo-router": "2.0.0",
+    "expo-router": "^3.4.6",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-symbols": "~0.1.2",
     "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
     "lucide-react-native": "^0.525.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
