--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -4,6 +4,7 @@
   },
   "build": {
     "production": {
+      "developmentClient": false,
       "distribution": "store",
       "ios": {
         "simulator": false,
