--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -8,8 +8,10 @@
       "distribution": "store",
       "ios": {
         "simulator": false,
-        "autoIncrement": "buildNumber"
+        "autoIncrement": "buildNumber",
+        "bundle": true
       }
     }
   }
 }
+
