--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -8,8 +8,7 @@
       "distribution": "store",
       "ios": {
         "simulator": false,
-        "autoIncrement": "buildNumber",
-        "bundle": true
+        "autoIncrement": "buildNumber"
       }
     }
   }
