--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -10,7 +10,8 @@
       "ios": {
         "simulator": false,
         "autoIncrement": false
-      }
+      },
+      "buildCommand": "npx expo export --dev --output-dir=./dist"
     }
   }
 }
