--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,14 @@
     "axios": "^1.10.0",
     "expo": "~48.0.18",
     "expo-blur": "~12.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-haptics": "~12.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
-    "expo-router": "^1.5.3",
+    "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-symbols": "~0.1.2",
@@ -42,8 +43,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
-    "expo-build-properties": "~0.8.3"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
