--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -10,6 +10,7 @@
       "ios": {
         "simulator": false,
         "autoIncrement": false,
+        "buildNumber": "11",
         "buildConfiguration": "Release",
         "resourceClass": "m-medium"
       }
