--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react-native",
     "skipLibCheck": true,
     "noImplicitAny": false,
+    "noEmitOnError": false,
     "paths": {
       "@/*": [
         "./*"
