--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,46 +9,46 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/metro-config": "^0.20.17",
+    "@expo/vector-icons": "^14.0.0",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@rnmapbox/maps": "^10.1.39",
     "axios": "^1.10.0",
-    "expo": "~48.0.18",
-    "expo-blur": "~12.4.1",
-    "expo-build-properties": "~0.8.3",
-    "expo-camera": "~13.4.4",
-    "expo-constants": "~14.4.2",
-    "expo-haptics": "~12.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-location": "~16.1.0",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
+    "expo": "^50.0.0",
+    "expo-blur": "~12.9.2",
+    "expo-build-properties": "~0.11.1",
+    "expo-camera": "~14.1.3",
+    "expo-constants": "~15.4.6",
+    "expo-haptics": "~12.8.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
+    "expo-router": "~3.4.10",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.4",
     "lucide-react-native": "^0.525.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-native": "^0.73.0",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/react-dom": "~18.0.10",
+    "typescript": "^5.3.0"
   }
 }
