--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -32,9 +32,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "your-apple-id@example.com",
-        "ascAppId": "your-app-store-connect-app-id",
-        "appleTeamId": "your-apple-team-id"
+        "appleId": "cjunya0602@icloud.com",
+        "ascAppId": "6748724177",
+        "appleTeamId": "8SXZ435352"
       }
     }
   }
