--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.6",
     "expo-haptics": "~12.8.1",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
@@ -33,6 +34,8 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "lucide-react-native": "^0.525.0",
+    "mime": "^4.0.7",
+    "mime-types": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -44,8 +47,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4",
-    "expo-image-picker": "~14.7.1"
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
