--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Area App - Location-based social app",
   "private": true,
-
   "scripts": {
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+    "install:all": "cd frontend && npm install && cd ../backend && npm install",
+    "android": "cd frontend && expo run:android",
+    "ios": "cd frontend && expo run:ios"
   },
   "keywords": [
     "react-native",
