--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "expo start",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@lucide/lab": "^0.1.2",
@@ -16,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@rnmapbox/maps": "^10.1.39",
     "axios": "^1.10.0",
+    "expo": "^53.0.20",
     "lucide-react-native": "^0.525.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,7 +32,9 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-location": "~18.1.6",
+    "expo-camera": "~16.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
