--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@rnmapbox/maps": "^10.1.39",
     "axios": "^1.10.0",
     "expo": "^53.0.20",
+    "expo-camera": "~16.1.11",
+    "expo-location": "~18.1.6",
     "lucide-react-native": "^0.525.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,14 +34,13 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4",
-    "socket.io-client": "^4.8.1",
-    "expo-location": "~18.1.6",
-    "expo-camera": "~16.1.11"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-dom": "~18.0.10",
+    "babel-plugin-polyfill-regenerator": "^0.6.5",
     "typescript": "^5.3.0"
   }
 }
