--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -6,13 +6,11 @@
   "build": {
     "production": {
       "developmentClient": false,
-      "distribution": "store",
+      "distribution": "internal",
       "ios": {
         "simulator": false,
         "autoIncrement": false,
-        "buildConfiguration": "Release",
-        "resourceClass": "m-medium",
-        "image":"latest"
+        "buildConfiguration": "Release"
       },
       "env":{
         "EXPO_PUBLIC_API_URL": "https://area-app.onrender.com/api",
@@ -27,6 +25,18 @@
         "simulator": false,
         "autoIncrement": false,
         "buildConfiguration": "Release"
+      }
+    },
+    "local": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true,
+        "autoIncrement": false,
+        "buildConfiguration": "Debug"
+      },
+      "android": {
+        "buildType": "apk"
       }
     }
   },
