--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,14 @@
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "build:ios": "expo run:ios --configuration Release",
+    "build:android": "expo run:android --variant release",
+    "build:ios-simulator": "expo run:ios --simulator",
+    "pod:install": "cd ios && pod install",
+    "pod:update": "cd ios && pod update",
+    "clean": "expo start --clear",
+    "reset": "expo start --clear && watchman watch-del-all && rm -rf node_modules && npm install"
   },
   "dependencies": {
     "@lucide/lab": "^0.1.2",
