--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "expo-camera": "~16.0.18",
     "expo-location": "~18.0.10",
     "expo-router": "^5.1.4",
+    "expo-status-bar": "^2.2.3",
     "lucide-react-native": "^0.525.0",
     "metro": "^0.81.0",
     "metro-core": "^0.83.1",
