--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,12 @@
     "axios": "^1.10.0",
     "expo": "^52.0.47",
     "expo-camera": "~16.0.18",
+    "expo-constants": "^17.1.7",
+    "expo-font": "^13.3.2",
+    "expo-keep-awake": "^14.1.4",
     "expo-location": "~18.0.10",
     "expo-router": "^5.1.4",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "^2.2.3",
     "lucide-react-native": "^0.525.0",
     "metro": "^0.81.0",
