--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "expo": "^52.0.47",
     "expo-camera": "~16.0.18",
     "expo-constants": "^17.1.7",
+    "expo-file-system": "^18.1.11",
     "expo-font": "^13.3.2",
+    "expo-image-picker": "^16.1.4",
     "expo-keep-awake": "^14.1.4",
     "expo-location": "~18.0.10",
     "expo-router": "^5.1.4",
