--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,15 +32,16 @@
     "expo-font": "^13.3.2",
     "expo-image-picker": "^16.1.4",
     "expo-keep-awake": "^14.1.4",
+    "expo-linking": "^7.1.7",
     "expo-location": "~18.0.10",
     "expo-router": "^5.1.4",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "^2.2.3",
     "lucide-react-native": "^0.525.0",
     "metro": "^0.81.0",
-    "metro-core": "^0.83.1",
-    "metro-runtime": "^0.83.1",
-    "metro-source-map": "^0.83.1",
+    "metro-core": "^0.81.0",
+    "metro-runtime": "^0.81.0",
+    "metro-source-map": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
