--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,23 +20,23 @@
   "dependencies": {
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@rnmapbox/maps": "^10.1.39",
     "axios": "^1.10.0",
     "expo": "^52.0.47",
     "expo-camera": "~16.0.18",
-    "expo-constants": "^17.1.7",
-    "expo-file-system": "^18.1.11",
-    "expo-font": "^13.3.2",
-    "expo-image-picker": "^16.1.4",
-    "expo-keep-awake": "^14.1.4",
-    "expo-linking": "^7.1.7",
+    "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-keep-awake": "~14.0.3",
+    "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
-    "expo-router": "^5.1.4",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "^2.2.3",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.525.0",
     "metro": "^0.81.0",
     "metro-core": "^0.81.0",
