--- a/frontend/ios/Podfile
+++ b/frontend/ios/Podfile
@@ -7,7 +7,8 @@ podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties
 ENV['RCT_NEW_ARCH_ENABLED'] = '0' if podfile_properties['newArchEnabled'] == 'false'
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 
-platform :ios, podfile_properties['ios.deploymentTarget'] || '15.1'
+# 安定版用の設定
+platform :ios, podfile_properties['ios.deploymentTarget'] || '14.0'
 install! 'cocoapods',
   :deterministic_uuids => false
 
@@ -31,7 +32,7 @@ target 'Area' do
     ]
   end
 
-  # Fix for String to Integer conversion error
+  # 安定版用の設定
   begin
     config = use_native_modules!(config_command)
   rescue TypeError => e
@@ -58,6 +59,14 @@ target 'Area' do
       config[:reactNativePath],
       :mac_catalyst_enabled => false,
     )
+
+    # ReactCommonモジュールの重複問題を解決
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      end
+    end
 
     # This is necessary for Xcode 14, because it signs resource bundles by default
     # when building for devices.
