--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,47 +19,47 @@
   },
   "dependencies": {
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "@rnmapbox/maps": "^10.1.39",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@rnmapbox/maps": "^10.0.23",
     "axios": "^1.10.0",
-    "expo": "^52.0.47",
-    "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
+    "expo": "~51.0.28",
+    "expo-camera": "~14.0.5",
+    "expo-constants": "~16.0.2",
     "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-keep-awake": "~14.0.3",
-    "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.10",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "lucide-react-native": "^0.525.0",
-    "metro": "^0.81.0",
-    "metro-core": "^0.81.0",
-    "metro-runtime": "^0.81.0",
-    "metro-source-map": "^0.81.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.3",
+    "expo-keep-awake": "~13.0.1",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~17.0.1",
+    "expo-router": "~3.4.7",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.12.1",
+    "lucide-react-native": "^0.541.0",
+    "metro": "^0.80.1",
+    "metro-core": "^0.80.1",
+    "metro-runtime": "^0.80.1",
+    "metro-source-map": "^0.80.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.6.4",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "@types/react-dom": "~18.3.1",
+    "@types/react": "~18.2.45",
+    "@types/react-dom": "~18.2.18",
     "babel-plugin-polyfill-regenerator": "^0.6.5",
     "typescript": "^5.3.0"
   }
