--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.7",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "prisma": "^5.22.0",
@@ -47,6 +48,7 @@
     "@types/cors": "^2.8.19",
     "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^0.0.48",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/node": "^20.19.9",
     "nodemon": "^3.1.10"
   }
