--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "firebase-admin": "^13.5.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
